Adds Navbar component
Co-authored-by: Freddievaneijsden <Freddievaneijsden@users.noreply.github.com>

--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -1,8 +1,9 @@
-#app {
+#app{
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   font-weight: normal;
+  background-color: #FCD34D;
 }
 
 a,
@@ -25,7 +26,7 @@ a,
     place-items: center;
   }
 
-  #app {
+  #app body {
     display: grid;
     grid-template-columns: 1fr 1fr;
     padding: 0 2rem;
