--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -1,3 +1,27 @@
+@import url('https://fonts.googleapis.com/css2?family=Baloo+2:wght@400..800&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
+
+h1 {
+  font-family: 'Baloo 2';
+  color: #ec4899;
+  font-size: 34px;
+  text-shadow: 2px 2px 0px #374151;
+}
+
+h2, h3 {
+  font-family: 'Baloo 2', cursive;
+  color: #ec4899;
+  margin-bottom: 0.5em;
+  line-height: 1.3; 
+  text-shadow: 1px 1px 0px #374151;
+}
+
+p, input {
+  font-family: 'Nunito';
+  color: #374151; 
+  line-height: 1.7;
+  font-size: 18px;
+}
+
 #app{
   max-width: 1280px;
   margin: 0 auto;
