--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -47,6 +47,16 @@ a,
   background-color: #FCD34D;
 }
 
+.custom-button {
+    font-weight: bold;
+    font-size: 16px;
+    padding: 0.8rem 0.2rem;
+    align-self: center;
+    border-radius: 8px;
+    background-color: #ec4899;
+    min-width: 150px;
+    
+}
 .form-stack {
   display: flex;
   flex-direction: column;
@@ -73,6 +83,16 @@ a,
   padding: 0.5rem;
   border: 1px solid #ccc;
   border-radius: 4px;
+  max-width: 400px;
+  min-width: 300px;
+  font-size: 16px;
+  font-weight: bold;
+  color: black;
+  align-self: center;
+}
+input::placeholder {
+  color: #ec4899;
+  font-weight: bold;
 }
 
 .signup-dropdown {
