--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -27,6 +27,10 @@ h2, h3 {
   text-shadow: 1px 1px 0px #374151;
 }
 
+#app {
+  background-color: #FCD34D;;
+}
+
 p, input {
   font-family: 'Nunito';
   color: #374151; 
@@ -38,6 +42,17 @@ body {
   padding: 0;
   margin: 0;
 }
+
+.imageGlow {
+  transition: all 0.5s ease;
+}
+
+.imageGlow:hover {
+  box-shadow: 0 0 25px 10px #ec4899;
+  border-radius: 20px;
+  transform: scale(1.05);
+}
+
 
 a,
 .green {
