--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -125,3 +125,23 @@ input::placeholder {
   from { opacity: 0; transform: translateY(-10px); }
   to { opacity: 1; transform: translateY(0); }
 }
+
+
+
+@media (hover: hover) {
+  a:hover {
+    background-color: hsla(160, 100%, 37%, 0.2);
+  }
+}
+
+@media (max-width: 600px) and (min-width: 375px) {
+  html, body, header {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  min-height: 100%;
+  box-sizing: border-box;
+}
+
+}
+
