--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -93,15 +93,14 @@ a,
   }
 }
 
-@media (min-width: 1024px) {
-  body {
-    display: flex;
-    place-items: center;
-  }
-
-  #app body {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
-  }
+@media (max-width: 600px) and (min-width: 375px) {
+  html, body, header {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  min-height: 100%;
+  box-sizing: border-box;
 }
+
+}
+
