--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -76,7 +76,6 @@ a,
     background-color: #ec4899;
     min-width: 150px;
     cursor: pointer;
-    
 }
 .form-stack {
   display: flex;
@@ -124,4 +123,55 @@ input::placeholder {
 @keyframes fadeIn {
   from { opacity: 0; transform: translateY(-10px); }
   to { opacity: 1; transform: translateY(0); }
+}
+
+
+
+
+
+@media (max-width: 600px) and (min-width: 375px) {
+  html, body, header {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  min-height: 100%;
+  box-sizing: border-box;
+}
+header{
+  position: static;
+}
+
+.imageGlow:active {
+  box-shadow: 0 0 10px 10px #ec4899;
+  background-color: #ec4899;
+  border-radius: 20px;
+  transform: scale(1.05);
+}
+
+.login-view {
+  padding: 30px;
+}
+.form-container {
+  width: 200px;
+  padding: 2rem;
+  padding-top: 0;
+}
+.form{
+  gap: 0.5rem;
+}
+
+.input {
+  max-width: 200px;
+  min-width: 100px;
+}
+
+.custom-button {
+    margin: 0;
+}
+
+h2{
+  margin: 0;
+}
+
+
 }
